hphp/test/zend/good/ext/calendar/tests/bug52744.php
<?php
var_dump(cal_days_in_month(CAL_GREGORIAN, 12, -1));
var_dump(cal_days_in_month(CAL_JULIAN, 12, -1));
?>