hphp/test/zend/bad/ext/spl/tests/SplTempFileObject_constructor_basic.php
<?php
var_dump(new SplTempFileObject());
?>